--- a/estilos.css
+++ b/estilos.css
@@ -1,6 +1,9 @@
 body{
     background-image: url("img/fondo.jpg");
     background-repeat: no-repeat;
+    background-position: 150px;
+    
+
     
 }
 
