--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,11 +1,8 @@
-
-
 header{
     margin: 10px auto ;
      width: 1200px;
     height: 230px;
-    background-color:red;
-    
+    background-color:red;    
 }
 
 .contenedor{
@@ -16,6 +13,7 @@ header{
 
 #uno{
     background-color: rgb(208, 101,3);
+    
 }
 #dos{
     background-color: rgb(233, 147,26);
@@ -54,4 +52,25 @@ img.icon {
    .contenedor:hover{
        height: 250px;
    }
+#bgventana{
+    background:rgba(0,0,0,0.7);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top:0px;
+    left: 0px;
+    z-index: 1;
+    visibility:hidden; 
+    
+}
+
+#ventana{
+    background-color: #D3DCE3;
+    border: solid #FFFFFF 10PX;
+    width: 1000px;
+    height:600px;   
+    margin-top: 50px;
+    margin-left: 200px;
+    border-radius: 4px;
+}
 
