--- a/plantilla.css
+++ b/plantilla.css
@@ -1,104 +1,48 @@
-html{
-    font-family: 'Roboto', sans-serif;
-}
-body{
-    background-color: #018D8A;
+
+/*flechas*/
+.f-izquierda{
+    text-decoration: none;
+    font-size: 80px;
+    color: rgb(24, 224, 84);
+    text-shadow: 2px 4px  black;
+ 
 }
 
-.nombre{
-background: #0b3936;
-width: 470px;
-height: 136px;
-margin-top: 100px;
-margin-left: 50px;
-border-top-left-radius: 5px;
-border-top-right-radius: 5px;
-}
 
-.nom{
-   font-size:35px;
-   position: absolute;
-  margin:50px 0 0 100px ;
-   color: white;
-}
 
-.nom::before{
-    content: '';
+
+.f-izquierda:hover{
+    text-decoration: none;
+}
+.f-derecha:hover{
+    text-decoration: none;
+}
+/* cabecera */
+   header{
     border-style: solid;
-    border-width: 55px 55px 55px 0;
-    border-color:transparent #115550 transparent transparent;
-    position: absolute;
-    margin: -37px 10px 10px -90px; 
-    -webkit-box-shadow: 10px   0 0px rgba(0,0,0,0.5);
-    
+    border-color:transparent transparent #96A702 transparent; 
+    width: 100%;
+    position:fixed;
+    height: 110px;
+    top: 0px;   
+    background-color: #001A19;   
+   }
 
-}
-
-.descripcion{
-    width: 425px;
-    height: 216px;
-    margin-left: 50px;
-    background: rgba(0,0,0,0.35);
-    padding:30px 30px 30px 15px;
-}
-.titulo{
-    color: #b6ebe8;
-    display: inline;
-    text-align: left;
-    padding: 15px 30px;
-    line-height: 20px;
-    font-weight: 700;
-    font-size: 15px;
-}
-
-.Caracter{
+   /*Descriopcion*/
+.nombre{
+    background-color:#0B3936;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    height: 130px;
+    margin-top: 120px;
+    margin-left: 40px;
     width: 470px;
-    height: 216px;
-    margin-left: 50px;
-    background: rgba(0,0,0,0.35);
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px; 
+       
 }
 
-.habilidad{
-    text-align: center;
-    display: block;
-    color: #fff;
-    text-shadow: 0 3px 5px #000;
-    font-size: 23PX;
-}
-img{
-    border-radius: 50%;
-    border: solid 5px white;
+.n-nombre{
     display: inline-block;
-    position: relative;
-    margin: 5px;
-    }
-
-    img:hover{
-        -webkit-transition: 0.5s;
-        border: solid 5px rgb(216, 79, 15);
-    }
-.skill{
-    margin: 40px 40px 30px 90px;
-
-    
-}
-
-
-.der{
-    font-size: 120px;
-    float: right;
     color: white;
-    font-weight:bold;
-    margin-right: 5px;
-    text-shadow: 0px -5px 3px #000;
+    font-size: 40px;
+    margin-left: 90px;  
 }
-
-
-/*font-size: 120px;
-   color: white;
-   font-weight:bold;
-   text-shadow: 0px -5px 3px #000;
-   float: left;
-   margin-left:5px;*/
