--- a/plantilla.css
+++ b/plantilla.css
@@ -24,6 +24,7 @@ body{
     width: 470px;       
 }
 
+/*flechas*/
 #f-izquierda{
     height: 80px;
     width: 80px;    
@@ -60,6 +61,7 @@ body{
     margin-top: 8PX;     
 }
 
+/*titulo*/
 #titulo{
     display: inline-block;     
     font-size: 35px;
@@ -74,8 +76,37 @@ body{
     background-color:rgb(27, 161, 152);
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
-    height: 400px;    
+    height: 420px;    
     margin-left: 40px;
     width: 470px; 
     -webkit-box-shadow: 10px 10px 119px -30px rgba(0,0,0,0.75);
 }
+
+#modal{
+    background:rgba(0,0,0,0.6);
+    height: 100%;
+    width: 100%;
+    position:fixed;
+    top:0;
+    left: 0;
+    z-index: 1;
+    opacity: 0.6;
+    visibility: hidden;
+}
+#ventana{
+    background: rgba(245, 252, 251, 0.966);
+    border: solid #ffffff 5px;
+    width: 400px;
+    height: 400px;
+    top: 50%;
+    left: 50%;
+    margin-top: 200px;
+    margin-left: 450px;
+}
+a{
+    text-decoration: none;
+    color:black;    
+    font-size: 20px;
+    background-color: aqua;
+}
+
