--- a/plantilla.css
+++ b/plantilla.css
@@ -13,13 +13,13 @@ body{
     background-color: #001A19;   
    }
 
-   /*Descriopcion*/
+   /*Nombre*/
 .nombre{
     background-color:#0B3936;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
     height: 100px;
-    margin-top: 20px;
+    margin-top: 10px;
     margin-left: 40px;
     width: 470px;       
 }
@@ -38,19 +38,28 @@ body{
     height: 80px;
     width: 80px;    
     display: inline-block;
-    margin-left: 12px;
+    margin-left: 6px;
     position: absolute;
     margin-top: 8PX;             
+}
+#f-izquierda-verde:hover{
+    margin-left: 0px;
+    -webkit-transition: 0.1s;
 }
 
 #f-derecha-verde{
     height: 80px;
     width: 80px;    
     display: inline-block; 
-    margin-left: 380px;
+    margin-left: 385px;
     position: absolute;
     margin-top: 8PX; 
 }
+#f-derecha-verde:hover{
+    margin-left: 390px;
+    -webkit-transition: 0.1s;
+}
+
 
 #f-derecha{
     height: 80px;
@@ -67,46 +76,41 @@ body{
     font-size: 35px;
     color:white;   
     position: absolute;
-    margin-top: 20px;
-    margin-left: 150PX;
-   
+    margin-top: 30px;
+    margin-left: 150PX;  
 }
 
 .descripcion{
     background-color:rgb(27, 161, 152);
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
-    height: 420px;    
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    height: 400px;
     margin-left: 40px;
-    width: 470px; 
+    padding: 1em;
+    text-align: justify;
+    width: 438px;     
     -webkit-box-shadow: 10px 10px 119px -30px rgba(0,0,0,0.75);
 }
 
 #modal{
-    background:rgba(0,0,0,0.6);
+    
     height: 100%;
     width: 100%;
     position:fixed;
     top:0;
     left: 0;
     z-index: 1;
-    opacity: 0.6;
+    opacity: 0.9;
     visibility: hidden;
 }
 #ventana{
-    background: rgba(245, 252, 251, 0.966);
-    border: solid #ffffff 5px;
+    background: rgb(31, 241, 101);
+    border: solid #ffffff 2px;
     width: 400px;
     height: 400px;
     top: 50%;
     left: 50%;
     margin-top: 200px;
     margin-left: 450px;
-}
-a{
-    text-decoration: none;
-    color:black;    
-    font-size: 20px;
-    background-color: aqua;
 }
 
