--- a/plantilla.css
+++ b/plantilla.css
@@ -120,9 +120,9 @@ body{
 }
 
 .fondo-paladin{
-background: rgba(86, 129, 1, 0.78);
+background: #5a9418;
 }
 
 .fondo-barbaro{
-    background-color: rgba(196, 50, 42, 0.78);
+    background-color: #fa9401;
 }
