--- a/plantilla.css
+++ b/plantilla.css
@@ -1,10 +1,12 @@
 
 body{
     font-family: 'Roboto', sans-serif; 
+    margin: 0;
+    
 }
 
 
-/* cabecera */
+/*cabecera */
    header{
     border-style: solid;
     border-color:transparent transparent #96A702 transparent; 
@@ -13,6 +15,9 @@ body{
     top: 0px;   
     background-color: #001A19;   
    }
+
+   
+
 
    /*Nombre*/
 .nombre{
@@ -89,7 +94,9 @@ body{
     margin-left: 40px;
     padding: 1em;
     text-align: justify;
-    width: 438px;     
+    font-style: bold;
+    width: 438px; 
+    color: white;    
     -webkit-box-shadow: 10px 10px 119px -30px rgba(0,0,0,0.75);
 }
 
@@ -105,24 +112,39 @@ body{
     visibility: hidden;
 }
 #ventana{
-    background: rgb(31, 241, 101);
+    background: rgb(4, 75, 75);
     border: solid #ffffff 2px;
-    width: 400px;
+    width: 1100px;
     height: 400px;
-    top: 50%;
-    left: 50%;
-    margin-top: 200px;
-    margin-left: 450px;
+    
+    margin-top: 120px;
+    margin-left: 120px;
+    color: white;
+    padding: 1em;
+    text-align: justify;
 }
 
 .fondo-guerrero{
-    background-color: rgba(0, 119, 109, 0.78);
+    background-image:url("img/clerigo.jpg") ;
+    background-repeat: no-repeat;
+    background-position: 0 116px;
+    
 }
 
 .fondo-paladin{
-background: #5a9418;
+background-image:url("img/explorador.jpg") ;
+    background-repeat: no-repeat;
+    background-position: 0 116px;
+    
 }
 
 .fondo-barbaro{
-    background-color: #fa9401;
+    background-image:url("img/guerrero.jpg") ;
+    background-repeat: no-repeat;
+    background-position: 0 116px;
+    
 }
+.logo{
+    float: right;
+}
+
