--- a/plantilla.css
+++ b/plantilla.css
@@ -90,6 +90,7 @@ body{
     background-color:rgba(27, 161, 152, 0.233);
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
+    margin-bottom: 10px;
     height: 400px;
     margin-left: 40px;
     padding: 1em;
@@ -146,5 +147,28 @@ background-image:url("img/explorador.jpg") ;
 }
 .logo{
     float: right;
+   
+    margin-left: -260px;
+    margin-top: -260px;
 }
 
+footer{
+    border-style: solid;
+    border-color:#96A702 transparent transparent transparent; 
+    width: 100%;
+    height: 110px;
+    top: 0px;   
+    background-color: #001A19;   
+   }
+
+   .icon{
+              
+       border-radius: 50%;
+       border: 4px solid white;
+       margin: 5px;
+       padding: 5px;
+   }
+
+   .icon:hover{
+    border: 4px solid #96A702;
+   }
