--- a/plantilla.css
+++ b/plantilla.css
@@ -14,8 +14,15 @@ body{
     height: 110px;
     top: 0px;   
     background-color: #001A19;   
+    color:#96A702;
+    font-family: 'Permanent Marker', cursive;
+    font-size: 50px;
+    
    }
-
+.juego{    
+    text-align: center;
+   
+}
    
 
 
@@ -172,3 +179,5 @@ footer{
    .icon:hover{
     border: 4px solid #96A702;
    }
+
+   
