--- a/css/razas.css
+++ b/css/razas.css
@@ -21,6 +21,9 @@ body{
    }
 .juego{    
     text-align: center;
+    float: right;
+    padding: 0;
+    
    
 }
 
@@ -121,7 +124,7 @@ body{
     background: rgb(4, 75, 75);
     border: solid #ffffff 2px;
     width: 1100px;
-    height: 400px;
+    height: 440px;
     
     margin-top: 120px;
     margin-left: 120px;
@@ -131,30 +134,29 @@ body{
 }
 
 .fondo-humano{
-    background-image:url("img/humanos.jpg") ;
+    background-image:url("../img/humanos.jpg") ;
     background-repeat: no-repeat;
     background-position: 0 116px;
     
 }
 
 .fondo-elfo{
-    background-image:url("img/elfo.jpg") ;
+    background-image:url("../img/elfo.jpg") ;
     background-repeat: no-repeat;
     background-position: 0 116px;
     
 }
 
 .fondo-enano{
-    background-image:url("img/guerrero.jpg") ;
+    background-image:url("../img/guerrero.jpg") ;
     background-repeat: no-repeat;
     background-position: 0 116px;
     
 }
 .logo{
-    float: right;
-   
-    margin-left: -260px;
-    margin-top: -260px;
+    position: absolute;
+ 
+    
 }
 
 footer{
@@ -178,4 +180,12 @@ footer{
     border: 4px solid #96A702;
    }
 
-   
+   .rasgo{
+       color:blue;  
+       background-color:orange;     
+       font-size: 30px;
+       padding: 0.2em;
+       border-radius: 5%;
+       text-decoration: none;
+       
+   }
