--- a/css/razas.css
+++ b/css/razas.css
@@ -137,6 +137,7 @@ body{
     background-image:url("../img/humanos.jpg") ;
     background-repeat: no-repeat;
     background-position: 0 116px;
+    background-size: 1600px 550px;
     
 }
 
@@ -144,6 +145,8 @@ body{
     background-image:url("../img/elfo.jpg") ;
     background-repeat: no-repeat;
     background-position: 0 116px;
+    background-size: 1600px 550px;
+   
     
 }
 
@@ -151,6 +154,7 @@ body{
     background-image:url("../img/guerrero.jpg") ;
     background-repeat: no-repeat;
     background-position: 0 116px;
+    background-size: 1600px 550px;
     
 }
 .logo{
